# fejkur

./: README-macos.md  README.md  audio_manager.py  bluetooth_manager.py  button_handler.py  check_vosk_model.py  config.yaml  config_manager.py  debug_vosk_silence.py  download_vosk_model.sh  find_vosk_model.py  install.sh  list_audio_devices.py  main.py  manual_download.sh  password_manager.py  passwords.txt  requirements-macos.txt  requirements.txt  run_macos.py  run_pi.py  setup_macos.sh  sync_to_pi.sh  test_button.py  test_gpio_simple.py  test_refactored.py  test_sounds.py  test_vosk.py  update_passwords.py  voice_recognizer_base.py
config/: config.yaml
mqtt2dmx/: platformio.ini
parable/: .env.example  .gitignore  commands.md  package-lock.json  package.json  startGame.command  startYOLO.command
parable/fejkur-yolo/: README.md  pyproject.toml
parable/fejkur-yolo/fejkur/: server.py
pupil-detector/: CAMERA_VIEWING_GUIDE.md  README.md  SETUP.md  SOLUTION_SUMMARY.md  TECHNICAL_SPEC.md  calibration_20250718_110940.json  check_display_config.py  check_pi_setup.py  connect_bluetooth_mouse.py  deploy.sh  download_latest_recording.sh  download_recordings.sh  fix_display_permissions.py  fix_permissions.sh  pupil-measurement.service  pupil_detector.py  pupil_detector_calibrated.py  pupil_measurement.py  pupil_measurement_headless.py  record_test_conditions.py  requirements.txt  (+12 more)
pupil-detector-old/: CALIBRATION_GUIDE.md  camera_calibration.py  generate_calibration_targets.py  pupil_logger.py  raspberry_pi_setup.sh  requirements.txt  setup.py  test_calibration.py
(+66 files in other folders)
